fixed li.item img size on mobile; fixed zindex issue with header on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -72,6 +72,13 @@ ul.items {
 			padding-top:30px;
 		}
 	}
+	li.item {
+		img {
+			width:100%;
+			height:65vw;
+			object-fit:cover; 
+		}
+	}
 }
 
 .item {
@@ -311,6 +318,7 @@ body {
 			left:0;
 			width:100%;
 			padding:15px 7px;
+			z-index:1000;
 			//height:60px;
 			@media (min-width:1000px) {
 				background:none;
@@ -432,6 +440,7 @@ body.internal {
 		//width:calc(100% + 15px);
 		margin-top:60vh;
 		box-shadow: $shadow1;
+		margin-bottom:54px;
 		@media (min-width:1000px) {
 			margin-left:64px;
 			margin-top:3px;
@@ -441,7 +450,9 @@ body.internal {
 		}
 		#base {
 			.base-image {
-				height:60vh;
+				height:100vh;
+				background-size: 100% auto !important;
+				background-position: 0 75px !important;
 				@media (min-width:1000px) {
 					height:100vh;
 				}
